BUG - The signatire delimiter is visible even if there is no signature

--- a/styles/styles-mobile.less
+++ b/styles/styles-mobile.less
@@ -1,5 +1,5 @@
 .compose-screen .editor-container {
-	div[data-anchor="signature"] {
+	div[data-anchor="signature"] > div:first-child {
 		border-top: 1px solid #f0f0f0;
 		&::before {
 			content: "Signature";
