--- a/styles/styles.less
+++ b/styles/styles.less
@@ -56,7 +56,7 @@
 }
 
 .panel.compose .panel_center {
-	div[data-anchor="signature"] {
+	div[data-anchor="signature"] > div:first-child {
 		border-top: 1px solid #f0f0f0;
 		&::before {
 			content: "Signature";
